# map4_extract_sensor_data

./: CMakeLists.txt  README.md  package.xml
include/: extract_compressed_image.hpp  extract_image.hpp  extract_pointcloud2.hpp
launch/: extract_compress_image.launch.xml  extract_image.launch.xml  extract_pointcloud2.launch.xml
src/: extract_compressed_image.cpp  extract_image.cpp  extract_pointcloud2.cpp
