<package format="2">
  <name>map4_extract_sensor_data</name>
  <version>0.1.0</version>
  <description>ROS2 node to save images and point clouds</description>

  <maintainer email="support@map4.jp">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
